[gd_scene load_steps=23 format=3 uid="uid://cqorayt3trtqu"]

[ext_resource type="PackedScene" uid="uid://d11eesvpxlsk2" path="res://menus/menu_base.tscn" id="1_riyxq"]
[ext_resource type="Script" uid="uid://dhenexglkw2cq" path="res://menus/menu_debug_relic.gd" id="2_bwfht"]
[ext_resource type="Texture2D" uid="uid://dwkd05si7teq0" path="res://assets/relics/Celestial spell_17.png" id="3_uruad"]
[ext_resource type="Texture2D" uid="uid://b8t6kvtcbmwoo" path="res://assets/relics/Galaxy Spell_3.png" id="4_jh4g2"]
[ext_resource type="Texture2D" uid="uid://0uhup2oibqkj" path="res://assets/relics/Galaxy Spell_34.png" id="5_o8wtp"]
[ext_resource type="Texture2D" uid="uid://cmncsbm6evlj" path="res://assets/relics/Heal Spell35.png" id="6_1uld7"]
[ext_resource type="Texture2D" uid="uid://qwuh5icebv41" path="res://assets/relics/Heal Spell50.png" id="7_oqe7f"]
[ext_resource type="Texture2D" uid="uid://dp4iami486a06" path="res://assets/relics/Heal Spell8.png" id="8_n2617"]
[ext_resource type="Texture2D" uid="uid://b3757rcihkds" path="res://assets/relics/Fire Spell Pack57.png" id="9_16ch0"]
[ext_resource type="Texture2D" uid="uid://kjpq1p676ts2" path="res://assets/relics/Fire Spell Pack71.png" id="10_wumva"]
[ext_resource type="Texture2D" uid="uid://x1ncxiwevj3q" path="res://assets/relics/Poison Spell28.png" id="11_nmhea"]
[ext_resource type="Texture2D" uid="uid://dsvfvtxo5kkd6" path="res://assets/relics/Galaxy Spell_48.png" id="12_icfdg"]
[ext_resource type="Texture2D" uid="uid://bke8knwaxrs25" path="res://assets/relics/Galaxy Spell_32.png" id="13_jh4g2"]
[ext_resource type="Texture2D" uid="uid://pnhdq0aqy2sw" path="res://assets/relics/Stone Spells75.png" id="14_o8wtp"]
[ext_resource type="Texture2D" uid="uid://d0uda4mbccpdi" path="res://assets/relics/Ice Spells54.png" id="15_1uld7"]
[ext_resource type="Texture2D" uid="uid://cpy0iq4ikx4ol" path="res://assets/relics/Water Spell_56.png" id="16_oqe7f"]
[ext_resource type="Texture2D" uid="uid://mqdal04k22fb" path="res://assets/relics/Celestial spell_62.png" id="17_n2617"]
[ext_resource type="Texture2D" uid="uid://b7862eckekd2m" path="res://assets/relics/Blood Spell_70.png" id="18_16ch0"]
[ext_resource type="Texture2D" uid="uid://b1cu8slkoic13" path="res://assets/relics/Celestial spell_79.png" id="19_wumva"]
[ext_resource type="Texture2D" uid="uid://cyfujw8x2fogr" path="res://assets/relics/Water Spell_11.png" id="20_nmhea"]
[ext_resource type="Texture2D" uid="uid://b4y7cckd8fq1k" path="res://assets/relics/Poison Spell41.png" id="21_icfdg"]
[ext_resource type="Texture2D" uid="uid://rr6nsky42f18" path="res://assets/relics/light Spell_9.png" id="22_j720b"]

[node name="MenuDebugRelic" instance=ExtResource("1_riyxq")]
offset_top = -25.0
offset_bottom = 25.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
script = ExtResource("2_bwfht")

[node name="MarginContainer" parent="Modal" index="1"]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" parent="Modal/MarginContainer/VBoxContainer" index="0"]
text = "Relic Debug"

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
texture = ExtResource("3_uruad")

[node name="Relic1" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
layout_mode = 2
texture = ExtResource("4_jh4g2")

[node name="Relic2" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="4"]
layout_mode = 2
texture = ExtResource("5_o8wtp")

[node name="Relic3" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="6"]
layout_mode = 2
texture = ExtResource("6_1uld7")

[node name="Relic4" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="7"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect5" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="8"]
layout_mode = 2
texture = ExtResource("7_oqe7f")

[node name="Relic5" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" index="9"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
texture = ExtResource("12_icfdg")

[node name="Relic10" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
texture = ExtResource("8_n2617")

[node name="Relic6" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="4"]
layout_mode = 2
texture = ExtResource("9_16ch0")

[node name="Relic7" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="5"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect8" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="6"]
layout_mode = 2
texture = ExtResource("10_wumva")

[node name="Relic8" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="7"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect9" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="8"]
layout_mode = 2
texture = ExtResource("11_nmhea")

[node name="Relic9" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer2" index="9"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="0"]
layout_mode = 2
texture = ExtResource("13_jh4g2")

[node name="Relic11" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="2"]
layout_mode = 2
texture = ExtResource("14_o8wtp")

[node name="Relic12" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect5" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="4"]
layout_mode = 2
texture = ExtResource("15_1uld7")

[node name="Relic13" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="5"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="6"]
layout_mode = 2
texture = ExtResource("16_oqe7f")

[node name="Relic14" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="7"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="8"]
layout_mode = 2
texture = ExtResource("17_n2617")

[node name="Relic15" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer3" index="9"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="TextureRect8" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="0"]
layout_mode = 2
texture = ExtResource("18_16ch0")

[node name="Relic16" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect9" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="2"]
layout_mode = 2
texture = ExtResource("19_wumva")

[node name="Relic17" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect10" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="4"]
layout_mode = 2
texture = ExtResource("20_nmhea")

[node name="Relic18" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="5"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect11" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="6"]
layout_mode = 2
texture = ExtResource("21_icfdg")

[node name="Relic19" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="7"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect12" type="TextureRect" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="8"]
layout_mode = 2
texture = ExtResource("22_j720b")

[node name="Relic20" type="CheckBox" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer4" index="9"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Relic1" to="." method="_on_relic_1_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Relic2" to="." method="_on_relic_2_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Relic3" to="." method="_on_relic_3_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Relic4" to="." method="_on_relic_4_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Relic5" to="." method="_on_relic_5_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer2/Relic10" to="." method="_on_relic_10_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer2/Relic6" to="." method="_on_relic_6_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer2/Relic7" to="." method="_on_relic_7_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer2/Relic8" to="." method="_on_relic_8_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer2/Relic9" to="." method="_on_relic_9_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer3/Relic11" to="." method="_on_relic_11_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer3/Relic12" to="." method="_on_relic_12_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer3/Relic13" to="." method="_on_relic_13_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer3/Relic14" to="." method="_on_relic_14_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer3/Relic15" to="." method="_on_relic_15_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer4/Relic16" to="." method="_on_relic_16_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer4/Relic17" to="." method="_on_relic_17_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer4/Relic18" to="." method="_on_relic_18_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer4/Relic19" to="." method="_on_relic_19_toggled"]
[connection signal="toggled" from="Modal/MarginContainer/VBoxContainer/HBoxContainer4/Relic20" to="." method="_on_relic_20_toggled"]

[editable path="Modal"]
